// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkDismissibleChip dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -9934465,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(44, 44, 46)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(205, 205, 215)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip dark mode should render correctly with "disabled" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={false}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -9934465,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(44, 44, 46)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(44, 44, 46)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(99, 99, 102)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(205, 205, 215)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
            Object {
              "color": "rgb(99, 99, 102)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip dark mode should render outline correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": -9934465,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(44, 44, 46)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgb(68, 69, 96)",
          "borderWidth": 1,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(205, 205, 215)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
            Object {
              "color": "rgb(205, 205, 215)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(104, 105, 127)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip light mode should render correctly with "disabled" 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={false}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(178, 178, 191)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(104, 105, 127)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
            Object {
              "color": "rgb(178, 178, 191)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip light mode should render outline correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "elevation": 0,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "transparent",
          "borderColor": "rgb(68, 69, 96)",
          "borderWidth": 1,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "includeFontPadding": false,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(104, 105, 127)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
            Object {
              "color": "rgb(205, 205, 215)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
      ]
    }
    testID="123"
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(104, 105, 127)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkDismissibleChip should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 40,
        "elevation": 2,
        "overflow": "hidden",
      },
      Array [
        Object {
          "flex": 1,
        },
      ],
    ]
  }
>
  <View
    accessibilityLabel="Dismiss"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 40,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 8,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {},
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "includeFontPadding": false,
            },
          ],
        ]
      }
    >
      Label
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(104, 105, 127)",
              "includeFontPadding": false,
              "marginStart": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
